@@ -1,3 +1,12 @@
+===================== RELEASE NOTES 3.35 =====================
+* FiYir: Moved the Seventeenlands code to a separate seventeenlands.py file.
+* FiYir: Moved the dataset download code to a separate download_dataset.py file.
+* FiYir: Moved the existing notifications to a separate notifications.py file.
+* FiYir: Added dataset notifications to notifications.py.
+* FiYir: Added a section label to the card tooltip.
+* FiYir: Added ui_progress.py
+* FiYir: Moved APPLICATION_VERSION to constants.py
+
 ===================== RELEASE NOTES 3.34 =====================
 * FiYir: Handle Powered Cube Draft (BUG-95)
 * Unrealities: File extractor test
